tests/baselines/reference/objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames(strict=true).errors.txt
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(4,25): error TS2322: Type 'null' is not assignable to type 'B<U>'.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(4,25): error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(8,25): error TS2322: Type 'null' is not assignable to type 'C<V>'.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(8,25): error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(22,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(23,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(26,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(27,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(30,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(31,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(34,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(35,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(38,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(39,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(42,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(43,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(46,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(47,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(50,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(51,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(54,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(55,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(58,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(59,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(62,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(63,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(66,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(67,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(70,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts(71,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.


==== objectTypesIdentityWithGenericConstructSignaturesDifferingTypeParameterNames.ts (30 errors) ====
    // object types are identical structurally
    
    class B<U> {
        constructor(x: U) { return null; }
                            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'B<U>'.
                            ~~~~~~
!!! error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
    }
    
    class C<V> {
        constructor(x: V) { return null; }
                            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'C<V>'.
                            ~~~~~~
!!! error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
    }
    
    interface I<X> {
        new(x: X): B<X>;
    }
    
    interface I2 {
        new<Y>(x: Y): C<Y>;
    }
    
    var a: { new<Z>(x: Z): B<Z> }
    var b = { new<A>(x: A) { return new C<A>(x); } };
    
    function foo1b(x: B<string>);
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: B<string>); // error
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: any) { }
    
    function foo1c(x: C<string>);
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: C<string>); // error
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: any) { }
    
    function foo2(x: I<string>);
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: I<string>); // error
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: typeof b); // error
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: any) { }
    
    function foo8(x: B<string>);
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: I<string>); // BUG 832086
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: any) { }
    
    function foo9(x: B<string>);
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: C<string>); // error
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: any) { }
    
    function foo10(x: B<string>);
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: typeof a); // BUG 832086
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: any) { }
    
    function foo11(x: B<string>);
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: any) { }
    
    function foo12(x: I<string>);
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: C<string>); // error
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: any) { }
    
    function foo12b(x: I2);
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: C<string>); // BUG 832086
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: any) { }
    
    function foo13(x: I<string>);
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: typeof a); // BUG 832086
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: any) { }
    
    function foo14(x: I<string>);
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: any) { }